# clutter

./: CMakeLists.txt
assets/: level.txt
src/: assets_embedded.h  bullet.c  bullet.h  camera.c  camera.h  constants.h  enemy.c  enemy.h  game.c  game.h  main.c  particle.c  particle.h  player.c  player.h  renderer.c  renderer.h  rope.c  rope.h  texture.c  texture.h  tilemap.c  tilemap.h  timer.h
